fix(module:select): prevent dropdown option overflow

--- a/components/select/style/patch.less
+++ b/components/select/style/patch.less
@@ -5,6 +5,10 @@
   display: block;
   width: 100%;
 
+  .cdk-virtual-scroll-content-wrapper {
+    right: 0;
+  }
+
   .full-width {
     contain: initial;
 
